# parallel-quicksort-algorithms

./: .gitignore  CMakeLists.txt  README.md  build.sh  mandel.job  mpi.job  omp.job
apps/: CMakeLists.txt  display.c  mandelbrot.c  mpi_example.c  mpi_scaling.c  omp_example.c  omp_scaling.c
datasets/: mandelbrot_scaling.csv  mpi_scaling_1e7.csv  mpi_scaling_1e8.csv  mpi_scaling_weak.csv  omp_scaling_1e6.csv  omp_scaling_1e7.csv  omp_scaling_1e8.csv  omp_scaling_weak.csv
include/: mandel.h  qsort.h
python/: scaling_mandelbrot.ipynb  scaling_mpi.ipynb  scaling_omp.ipynb
python/utils_mpi/: plot.py  preproc.py
python/utils_omp/: plot.py  preproc.py
src/: CMakeLists.txt  assessment.c  mpi_hyperquicksort.c  mpi_parallel_qsort.c  mpi_psrs.c  omp_hyperquicksort.c  omp_parallel_qsort.c  omp_psrs.c  omp_task_qsort.c  serial_qsort.c
